# codecrafters-shell-cpp

./: CMakeLists.txt  README.md  your_program.sh
.codecrafters/: run.sh
src/: main.cpp
